--- a/Part2/app/src/main/res/layout/activity_edit_student.xml
+++ b/Part2/app/src/main/res/layout/activity_edit_student.xml
@@ -19,21 +19,21 @@
         android:id="@+id/edit_student_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter student name"
+        android:hint="Enter Full name"
         android:inputType="text" />
 
     <EditText
         android:id="@+id/edit_student_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter student email"
+        android:hint="Enter email"
         android:inputType="text" />
 
     <EditText
         android:id="@+id/edit_student_matric"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter student matric number"
+        android:hint="Enter matric number"
         android:inputType="text" />
 
     <Button
