--- a/Part2/app/src/main/res/layout/activity_student_details.xml
+++ b/Part2/app/src/main/res/layout/activity_student_details.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     tools:context=".StudentDetailsActivity">
+
 
     <TextView
         android:id="@+id/studentNameTextView"
@@ -56,7 +56,7 @@
         app:layout_constraintTop_toBottomOf="@id/studentMatricTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp" /> <!-- Added marginTop to reduce gap -->
+        android:layout_marginTop="10dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/courseRecyclerView"
